--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,8 +257,10 @@ h6 {
 }
 
 #hero .hero-container {
-  position: relative;
+  position: absolute;
+  left: 35%;
   z-index: 2;
+  transform: translateX(-50%);
   min-width: 300px;
 }
 
